examples/lexer/bad/03_missing_colon_type.sg
// Ошибка: пропущено двоеточие в объявлении типа
fn test_colon() -> int {
    let x int = 42;
    let y:int = 10;
    return x + y;
}
